tests/test_files_pa3/SemanticErrors/LocalVarsNotInitB4Use7.ic
class A
{
	static void main(string[] args) { }

	void a()
	{
		int[] b;
		int[] c;
		c = b;
	}
}
